# tic.tac.toe

./: .gitignore  README.md  package.json
api/: .env.example  Cargo.toml
api/src/: config.rs  main.rs
api/src/routes/api/v1/: _ignore-it.rs  handler_example.rs  mod.rs
api/src/structs/: response.rs
api/src/util/: error.rs  gateway.rs  mod.rs  response.rs  server.rs
api/ws/: mix.exs
api/ws/assets/: tailwind.config.js
api/ws/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
api/ws/lib/: ws.ex  ws_web.ex
api/ws/lib/ws/: application.ex
api/ws/lib/ws_web/: endpoint.ex
api/ws/lib/ws_web/channels/: socket.ex  socket_channel.ex
api/ws/priv/static/assets/: app.css
api/wss/: .formatter.exs  mix.exs
api/wss/lib/: wss.ex
api/wss/lib/wss/: application.ex
api/wss/lib/wss_app/: router.ex  socket.ex
api/wss/lib/wss_app/util/: validator.ex
src/: App.jsx  App.tsx
src/components/: Board.jsx  Board.tsx  Game.jsx  Game.tsx  ScoreTable.jsx  ScoreTable.tsx  Square.jsx  Square.tsx
src/components/auth/: Auth.tsx
src/config/: web.json
src/styles/: _auth.scss  _background.scss  _base.scss  _board.scss  _game.scss  _loading-screen.scss  _media-queries.scss  _modal.scss  _reset-button.scss  _score-table.scss  _status.scss  main.scss
src/utils/: gameUtils.js  gameUtils.ts  websocket.ts
wss/: mix.exs
wss/lib/: wss.ex
wss/lib/wss/: application.ex
wss/lib/wss_app/: socket.ex
wss/lib/wss_app/util/: registry.ex  validator.ex
