[package]
name = "RustAPI"
version = "0.1.0"
edition = "2021"

[dependencies]

# server
axum = "0.8.1"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }

# database
sqlx = {version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros"]}

# json
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"

# env 
dotenvy = "0.15.7"

# error catching 
anyhow = "1.0.94"

# date 
chrono = "0.4.39"