[package]
name = "RustAPI"
version = "0.1.0"
edition = "2021"

[dependencies]

# server
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
futures-util = "0.3"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
anyhow = "1.0"
thiserror = "2.0.9"
dotenvy = "0.15"
